--- a/package.json
+++ b/package.json
@@ -1,22 +1,68 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-angularX-boilerplate",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "electron-angularX-boilerplate",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "ng": "ng",
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "pree2e": "webdriver-manager update",
+    "build": "ng build",
+    "electron": "electron dist",
+    "package": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=darwin --arch=all --out=dist-app --overwrite",
+    "package-mac": "electron-packager dist --overwrite --asar=true --platform=darwin --arch=x64 --icon=Setup/setupdata/icon.icon --prune=true --out=release-builds",
+    "package-win": "electron-packager dist --overwrite --asar=true --platform=win32 --arch=all --icon=Setup/setupdata/icon.icon --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"electron-angularX-boilerplate\"",
+    "package-linux": "electron-packager dist --overwrite --asar=true --platform=linux --arch=x64 --icon=Setup/setupdata/icon.icon --prune=true --out=release-builds",
+    "create-installer-mac": "electron-installer-dmg ./release-builds/Electron\\ tutorial\\ app-darwin-x64/Electron\\ tutorial\\ app.app electron-angularX-boilerplate --out=release-builds --overwrite --icon=assets/icons/mac/icon.icns",
+    "create-installer-win": "node installers/windows/createinstaller.js"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "repository": "https://github.com/thardes2/electron-angularX-boilerplate",
+  "author": "Tobias Hardes / Ascora GmbH",
+  "license": "MIT",
+  "dependencies": {
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/material": "^2.0.0-beta.1",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+    "angular2-modal": "^2.0.3",
+    "core-js": "^2.4.1",
+    "electron-json-storage": "^3.0.0",
+    "lodash": "^4.17.4",
+    "ng-lottie": "^0.2.1",
+    "ng2-bootstrap": "^1.3.3",
+    "ng2-translate": "^4.2.0",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.8.4"
+  },
   "devDependencies": {
-    "electron": "~1.6.2"
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.60",
+    "codelyzer": "2.0.0",
+    "electron": "^1.4.4",
+    "electron-installer-dmg": "^0.2.1",
+    "electron-packager": "^8.1.0",
+    "electron-rebuild": "^1.4.0",
+    "electron-winstaller": "^2.5.2",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "4.5.0",
+    "typescript": "~2.2.0"
   }
 }
